@@ -23,7 +23,6 @@
 
 #ifndef ASM_FILE
 
-void EXPORT_FUNC (grub_halt) (void);
 void grub_qemu_init_cirrus (void);
 
 #endif
